--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     <!-- List record submission form, add a link to replace the '#' when putting a link to your list submission form-->
                     <a
                         class="nav__cta type-label-lg"
-                        href="https://discord.gg/QJGDns5R"
+                        href="https://forms.gle/U1UNTFY6qboGTqsA9"
                         target="_blank"
                         >Submit Record</a
                     >
